# doc-agent

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  flatten.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh
.cursor/: config.yaml
docs/: architecture.md  calculateTotalPrice.md  short_descriptions.md  todo.txt
docs/adr/: 001-initial-architecture.md
examples/: calc.js
src/: main.py  tools.py
src/agent/: ingestion.py
src/doc_agent/: __main__.py  agent.py  agent_loop.py  draft.py  lint.py  outline.py  pipeline.py  publish.py  release_notes.py  tools.py
src/doc_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/doc_agent/evaluators/: __init__.py  ai_eval.py  forbidden_words.txt  heuristics.py  rubric.py  types.py
src/doc_agent/linters/: short_description.py
tests/: test_agent.py  test_agent_loop.py  test_agent_loop_main.py  test_agent_loop_mock.py  test_cli.py  test_evaluators.py  test_heuristics.py  test_ingestion.py  test_lint.py  test_outline.py  test_publish.py
tests/linters/: test_short_description.py
